# AivisSpeech-Engine

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  engine_manifest.json  pyproject.toml  run.py
.codex/skills/aivisspeech-engine-sentry-triage/: SKILL.md
.codex/skills/aivisspeech-engine-sentry-triage/agents/: openai.yaml
.codex/skills/aivisspeech-engine-sentry-triage/references/: classification.md  filter-implementation.md  sentry-workflow.md
.codex/skills/aivisspeech-engine-sentry-triage/scripts/: probe_sentry_filter.py
.github/actions/prepare_python/: action.yml
.github/workflows/: build-docs.yml  build-engine.yml  build-latest-dev.yml  build-latest-engine-container.yml  sentry.yml  test-engine-container.yml  test-engine-package.yml  test-issue-freshness.yml  test-merge-gatekeeper.yml  test-security.yml  test.yml
api/: index.html
resources/engine_manifest_assets/: dependency_licenses.json  update_infos.json
test/benchmark/: engine_preparation.py
test/benchmark/speed/: character.py  request.py
test/e2e/: conftest.py  test_characters.py  test_tts.py
test/e2e/__snapshots__/test_openapi/: test_OpenAPIの形が変わっていないことを確認.json
test/e2e/single_api/: utils.py
test/e2e/single_api/aivm_models/: test_aivm_models.py  test_runtime.py
test/e2e/single_api/aivm_models/__snapshots__/test_aivm_models/: test_delete_default_aivm_model_400.json  test_get_aivm_model_200.json  test_get_aivm_models_200.json  test_post_install_aivm_model_without_file_or_url_422.json  test_post_install_broken_aivmx_file_422.json  test_post_load_aivm_model_404.json  test_post_update_aivm_model_without_update_422.json
test/e2e/single_api/engine_info/__snapshots__/test_engine_manifest/: test_get_engine_manifest_200.json
test/e2e/single_api/morphing/: test_synthesis_morphing.py
test/e2e/single_api/speaker/: test_singer_info.py  test_speaker_info.py  test_speakers.py
test/e2e/single_api/speaker/__snapshots__/test_speaker_info/: test_get_speaker_info_404.json
test/e2e/single_api/speaker/__snapshots__/test_speakers/: test_get_speakers_200.json
test/e2e/single_api/tts_pipeline/: test_accent_phrases.py  test_audio_query.py  test_cancellable_synthesis.py  test_initialize_speaker.py  test_is_initialized_speaker.py  test_mora_data.py  test_mora_length.py  test_mora_pitch.py  test_multi_synthesis.py  test_sing_frame_f0.py  test_sing_frame_volume.py  test_synthesis.py  test_validate_kana.py
test/e2e/single_api/tts_pipeline/__snapshots__/test_accent_phrases/: test_post_accent_phrases_enable_katakana_english_200.json
test/e2e/single_api/tts_pipeline/__snapshots__/test_audio_query/: test_post_audio_query_enable_katakana_english_200.json
test/e2e/single_api/tts_pipeline/__snapshots__/test_multi_synthesis/: test_post_multi_synthesis_empty_queries_422.json
test/e2e/single_api/tts_pipeline/__snapshots__/test_validate_kana/: test_post_validate_kana_empty_400.json
test/e2e/single_api/user_dict/: test_import_user_dict.py
test/e2e/single_api/user_dict/__snapshots__/test_import_user_dict/: test_post_import_user_dict_422.json
test/unit/: test_aivm_infos_repository.py  test_audio_query_model.py
test/unit/setting/: test_setting.py
test/unit/tts_pipeline/: test_style_bert_vits2_tts_engine.py  test_style_bert_vits2_tts_engine_runtime.py  test_wave_synthesizer.py
test/unit/utility/: test_sentry_utility.py  test_text_utility.py
tools/: __init__.py  build_and_push_multi_platform_docker_images.bash  create_venv_and_generate_licenses.bash  generate_licenses.py  modify_pyinstaller.bash
voicevox_engine/: aivm_infos_repository.py  aivm_manager.py  engine_manifest.py  model.py
voicevox_engine/app/: middlewares.py  openapi_schema.py
voicevox_engine/app/routers/: aivm_models.py  character.py  morphing.py  preset.py  tts_pipeline.py
voicevox_engine/core/: core_initializer.py
voicevox_engine/preset/: model.py
voicevox_engine/setting/: setting_manager.py
voicevox_engine/tts_pipeline/: audio_postprocessing.py  kana_converter.py  model.py  style_bert_vits2_tts_engine.py  tts_engine.py
voicevox_engine/user_dict/: user_dict_manager.py
voicevox_engine/utility/: aivishub_client.py  sentry_utility.py
