[project]
name = "AivisSpeech-Engine"
version = "1.2.0" # TODO: できれば version を自動管理する
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115.5,<1.0.0",
  "jinja2>=3.1.6,<4.0.0", # NOTE: required by fastapi.templating.Jinja2Templates (fastapi-slim's unmanaged dependency)
  "kanalizer>=0.1.1",
  "numpy>=2.3.0",
  "platformdirs>=4.2.0",
  "psutil>=6.1.1",
  "pydantic>=2.7.3",
  "pyopenjtalk-plus>=0.4.1.post8,<1.0.0",
  "python-multipart>=0.0.31,<1.0.0", # NOTE: required by fastapi.Form (fastapi-slim's unmanaged dependency)
  "pyworld-prebuilt>=0.3.5.post2,<1.0.0",
  "pyyaml>=6.0.1",
  "semver>=3.0.0",
  "setuptools<82", # NOTE: pyworld が pkg_resources を使っているため
  "soundfile>=0.13.1,<1.0.0",
  "soxr>=0.5.0,<1.0.0",
  "starlette>=1.0.1,<2.0.0",
  "uvicorn>=0.34.0,<1.0.0",
  # 以下は AivisSpeech Engine 独自の依存関係
  "jaconv>=0.3.4,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "gputil>=1.4.0",
  "py-cpuinfo>=9.0.0",
  "sentry-sdk[fastapi]>=2.19.2,<3.0.0",
  "wmi>=1.5.1,<2.0.0; sys_platform == 'win32'",
  # truststore は HTTPS 通信時にシステムにインストールされた証明書ストアを使うために必要
  ## ref: https://github.com/psf/requests/issues/2966
  ## ref: https://truststore.readthedocs.io/en/latest/
  "truststore>=0.10.0,<1.0.0",
  # aivmlib は AIVMX ファイルのメタデータ読み取りに必要
  "aivmlib>=1.2.1,<2.0.0",
  # AivisSpeech-Engine にはカスタマイズされた Style-Bert-VITS2 と e2k が必要
  "style-bert-vits2",
  "e2k",
  # OS に応じて適切な ONNX Runtime プラグインをインストール
  ## onnxruntime (CPU): onnxruntime-directml / onnxruntime-gpu 非対応の環境すべて
  ## macOS x64 のみ、Intel Mac に対応する最終バージョンである onnxruntime==1.23.2 に固定
  "onnxruntime==1.23.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  ## macOS arm64 / Linux aarch64 は Intel Mac 向け wheel の無い 1.24 以降を使う
  ## (universal lock により 1.23.2 側に固定されるのを防ぐ)
  "onnxruntime>=1.24.0,<2.0.0; (sys_platform == 'darwin' and platform_machine != 'x86_64') or (sys_platform == 'linux' and platform_machine != 'x86_64')",
  ## onnxruntime (DirectML): Windows のみ
  "onnxruntime-directml>=1.24.0,<2.0.0; sys_platform == 'win32'",
  ## onnxruntime (GPU): Linux x64 のみ
  ## 1.27.0 以降、import した時点で CUDA 13 の .so がないとエラー吐くように改悪されたので当面 1.26.x に固定
  "onnxruntime-gpu>=1.24.0,<1.27.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv]
default-groups = []
exclude-newer = "1 week"

[tool.uv.sources]
style-bert-vits2 = { git = "https://github.com/tsukumijima/Style-Bert-VITS2", rev = "6eca18a3cb45bf164d80831e722256d4eae98910" }
e2k = { git = "https://github.com/tsukumijima/e2k", rev = "9920754e15d8c96404bef0bd81d424352fb7a48b" }

[dependency-groups]
build = [
  "pyinstaller>=6.19.0,<7.0.0",
  "taskipy>=1.12.2",
]
dev = [
  "coveralls>=4.0.1",
  "httpx>=0.28.1", # NOTE: required by fastapi.testclient.TestClient (fastapi-slim's unmanaged dependency)
  "mypy>=1.10.0",
  "pip-audit>=2.7.3",
  "pip-licenses==5.0.0",  # NOTE: must be specified exactly (c.f. #1281)
  "pre-commit>=4.0.1",
  "pytest>=8.2.0",
  "ruff>=0.11.1,<1.0.0",
  "syrupy>=4.6.1",
  "types-pyyaml>=6.0.12",
  "typos>=1.31.1",
  "taskipy>=1.12.2",
]
licenses = [
  "pip-licenses==5.0.0",  # NOTE: must be specified exactly (c.f. #1281)
]

[tool.taskipy.tasks]
serve = "uv run python run.py"
lint = "uv run ruff check --fix . && uv run mypy ."
format = "uv run ruff format ."
mypy = "uv run mypy ."
typos = "uv run typos"
test = "uv run pytest"
update-snapshots = "uv run pytest --snapshot-update"
update-licenses = "bash -c \"OUTPUT_LICENSE_JSON_PATH=resources/engine_manifest_assets/dependency_licenses.json bash tools/create_venv_and_generate_licenses.bash\""
check-licenses = "bash -c \"OUTPUT_LICENSE_JSON_PATH=/dev/null bash tools/create_venv_and_generate_licenses.bash\""
build = "uv run pyinstaller --noconfirm run.spec"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "D", "D213", "PT", "NPY"]
ignore = [
  "E501", # line-too-long
  "D200", # AivisSpeech Engine ではコーディングスタイルに合わないため運用しない
  "D202", # AivisSpeech Engine ではコーディングスタイルに合わないため運用しない
  "D205", # AivisSpeech Engine ではコーディングスタイルに合わないため運用しない
  "D400", # missing-trailing-period。日本語の「。」に対応していないため。
  "D403", # first-word-uncapitalized。日本語とは無関係であるため。日英混合時の挙動に一貫性が無いため。
]
unfixable = [
  "F401", # unused-import
  "F841", # unused-variable
]

[tool.ruff.lint.per-file-ignores]
"test/**/test_*.py" = ["D103"] # undocumented-public-function。pytest の対象 test_*() が D103 の対象になり、関数名から内容が自明でも docstring を強制されるため。

[tool.ruff.lint.isort]
known-first-party = ["voicevox_engine"]
known-third-party = ["numpy"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
strict = true
plugins = "numpy.typing.mypy_plugin,pydantic.mypy"
python_version = "3.11"
exclude = ["dist"]
ignore_missing_imports = true
warn_unreachable = false
warn_unused_ignores = false

[tool.pytest.ini_options]
filterwarnings = ["ignore::pydantic.warnings.PydanticDeprecatedSince20"]
# テスト完了後に一時ディレクトリを即座に削除し、ディスク使用量の蓄積を防ぐ
tmp_path_retention_policy = "none"

[tool.typos.default.extend-words]
datas = "datas" # PyInstaller's argument
Collet = "Collet"  # CUDA EULA

[tool.typos.files]
extend-exclude = [
  "resources",
  "test/e2e/single_api/engine_info/__snapshots__/test_engine_manifest/test_get_engine_manifest_200.json",
  "README.md",
  "tools/licenses",
  "uv.lock",
]
